// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateProfile should not upload avatar image 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <div
      class="px-4 sm:px-6 lg:px-8 bg-theme-background"
    >
      <div
        class="flex items-center flex-shrink-0 h-20 md:h-24"
      >
        <div
          class="flex p-2 rounded-lg bg-logo"
        >
          <img
            alt="ARK Logo"
            class="h-6 md:h-8 lg:h-10"
            src="ark-logo.png"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fzoXzr imWwrn flex flex-col justify-center flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="max-w-lg mx-auto"
          >
            <h1
              class="mb-0 md:text-4xl"
            >
              Create Profile
            </h1>
            <div
              class="text-theme-neutral-dark"
            >
              Login with your MarketSquare account or create a new Profile below.
            </div>
            <div
              class="pb-4 mt-8"
            >
              <button
                class="sc-AxjAm ddQVWI w-full"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxhCb VoPpj"
                  height="20"
                  width="20"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
                <span
                  class="ml-2"
                >
                  Login with MarketSquare
                </span>
              </button>
            </div>
            <div
              class="sc-AxirZ jjvtQn border-theme-neutral-300"
              type="horizontal"
            />
            <form
              class="mt-8"
              data-testid="CreateProfile__form"
            >
              <div
                class=""
              >
                <ul
                  class="sc-fzpjYC eNSRJG"
                  data-testid="list-divided__items"
                >
                  <li
                    class="flex flex-col w-full "
                    data-testid="list-divided-item__wrapper"
                  >
                    <div
                      class="flex justify-between flex-col items-start"
                      data-testid="list-divided-item__inner-wrapper"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="mr-5 text-xl font-semibold"
                          data-testid="list-divided-item__label"
                        >
                          Personal Details
                        </span>
                        <span
                          class="text-sm text-theme-neutral-dark mt-1 font-medium text-theme-neutral-dark"
                          data-testid="list-divided-item__label--description"
                        >
                          Profile Image
                        </span>
                      </div>
                    </div>
                    <div
                      class=""
                      data-testid="list-divided-item__content"
                    >
                      <div
                        class="flex flex-row mt-2 mb-8"
                      >
                        <div
                          class="flex items-center justify-center w-24 h-24 mr-6 border-2 border-dashed rounded border-theme-neutral-300"
                        >
                          <div
                            class="w-20 h-20 overflow-hidden rounded-full"
                          >
                            <button
                              class="sc-AxjAm ddJBbC w-20 h-20"
                              color="primary"
                              data-testid="CreateProfile__upload-button"
                              type="button"
                            >
                              <div
                                class="sc-AxhCb fxrKLH"
                                height="1em"
                                width="1em"
                              >
                                <svg>
                                  upload.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
                <div
                  class="relative space-y-8"
                >
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="flex inline-block mb-2 text-sm font-medium transition-colors duration-100 FormLabel text-theme-neutral-dark"
                      data-testid="FormLabel"
                      for="name"
                      label="Name"
                      required=""
                    >
                      Name
                      <div
                        class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <input
                      class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                      data-testid="Input"
                      name="name"
                    />
                  </fieldset>
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="flex inline-block mb-2 text-sm font-medium transition-colors duration-100 FormLabel text-theme-neutral-dark"
                      data-testid="FormLabel"
                      for="marketProvider"
                      label="Market Provider"
                      required=""
                    >
                      Market Provider
                      <div
                        class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <div
                      class="relative w-full"
                    >
                      <input
                        class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
                        data-testid="select-list__input"
                        name="marketProvider"
                        readonly=""
                        type="text"
                        value="coincap"
                      />
                      <div
                        class="relative w-full cursor-pointer"
                      >
                        <div>
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="downshift-48-label downshift-48-toggle-button"
                            class="sc-fznxsB hwZFkF  is-selected "
                            data-testid="select-list__toggle-button"
                            id="downshift-48-toggle-button"
                            type="button"
                          >
                            CoinCap
                          </button>
                          <ul
                            aria-labelledby="downshift-48-label"
                            class="sc-fznJRM KaIHo"
                            id="downshift-48-menu"
                            role="listbox"
                            tabindex="-1"
                          />
                        </div>
                        <div
                          class="sc-AxgMl sc-Axmtr hWILTO w-10 pointer-events-none text-theme-neutral"
                        >
                          <div
                            class="sc-AxhCb dxfUlj"
                            height="8"
                            width="8"
                          >
                            <svg>
                              arrowdown.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="flex inline-block mb-2 text-sm font-medium transition-colors duration-100 FormLabel text-theme-neutral-dark"
                      data-testid="FormLabel"
                      for="currency"
                      label="Currency"
                      required=""
                    >
                      Currency
                      <div
                        class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <div
                      class="relative w-full"
                    >
                      <input
                        class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
                        data-testid="select-list__input"
                        name="currency"
                        readonly=""
                        type="text"
                        value="btc"
                      />
                      <div
                        class="relative w-full cursor-pointer"
                      >
                        <div>
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="downshift-49-label downshift-49-toggle-button"
                            class="sc-fznxsB hwZFkF  is-selected "
                            data-testid="select-list__toggle-button"
                            id="downshift-49-toggle-button"
                            type="button"
                          >
                            BTC (Ƀ)
                          </button>
                          <ul
                            aria-labelledby="downshift-49-label"
                            class="sc-fznJRM KaIHo"
                            id="downshift-49-menu"
                            role="listbox"
                            tabindex="-1"
                          />
                        </div>
                        <div
                          class="sc-AxgMl sc-Axmtr hWILTO w-10 pointer-events-none text-theme-neutral"
                        >
                          <div
                            class="sc-AxhCb dxfUlj"
                            height="8"
                            width="8"
                          >
                            <svg>
                              arrowdown.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
                <div
                  class="mt-8"
                >
                  <ul
                    class="sc-fzpjYC eNSRJG"
                    data-testid="list-divided__items"
                  >
                    <li
                      class="flex flex-col w-full "
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between flex-col items-start"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex flex-col"
                        >
                          <span
                            class="mr-5 text-lg font-semibold text-theme-neutral-dark"
                            data-testid="list-divided-item__label"
                          >
                            Dark Theme
                          </span>
                        </div>
                      </div>
                      <div
                        class=""
                        data-testid="list-divided-item__content"
                      >
                        <div
                          class="flex flex-row justify-between"
                        >
                          <span
                            class="mt-1 text-sm font-medium text-theme-neutral"
                          >
                            Want to set the wallet to dark mode?
                          </span>
                          <div
                            class="-mt-4"
                          >
                            <label
                              class="flex"
                            >
                              <input
                                class="sc-fznWqX iacyMP"
                                name="isDarkMode"
                                type="checkbox"
                              />
                              <div
                                class="sc-fzoiQi eGdcKs"
                              >
                                <span
                                  class="sc-fzqARJ hZWoJI"
                                />
                              </div>
                            </label>
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="sc-AxirZ jJscrd border-theme-neutral-300"
                  type="horizontal"
                />
              </div>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="sc-AxjAm ddJBbC"
                  color="primary"
                  type="button"
                >
                  Back
                </button>
                <button
                  class="sc-AxjAm ddQVWI"
                  color="primary"
                  data-testid="CreateProfile__submit-button"
                  type="submit"
                >
                  Complete
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreateProfile should render 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <div
      class="px-4 sm:px-6 lg:px-8 bg-theme-background"
    >
      <div
        class="flex items-center flex-shrink-0 h-20 md:h-24"
      >
        <div
          class="flex p-2 rounded-lg bg-logo"
        >
          <img
            alt="ARK Logo"
            class="h-6 md:h-8 lg:h-10"
            src="ark-logo.png"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fzoXzr imWwrn flex flex-col justify-center flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="max-w-lg mx-auto"
          >
            <h1
              class="mb-0 md:text-4xl"
            >
              Create Profile
            </h1>
            <div
              class="text-theme-neutral-dark"
            >
              Login with your MarketSquare account or create a new Profile below.
            </div>
            <div
              class="pb-4 mt-8"
            >
              <button
                class="sc-AxjAm ddQVWI w-full"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxhCb VoPpj"
                  height="20"
                  width="20"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
                <span
                  class="ml-2"
                >
                  Login with MarketSquare
                </span>
              </button>
            </div>
            <div
              class="sc-AxirZ jjvtQn border-theme-neutral-300"
              type="horizontal"
            />
            <form
              class="mt-8"
              data-testid="CreateProfile__form"
            >
              <div
                class=""
              >
                <ul
                  class="sc-fzpjYC eNSRJG"
                  data-testid="list-divided__items"
                >
                  <li
                    class="flex flex-col w-full "
                    data-testid="list-divided-item__wrapper"
                  >
                    <div
                      class="flex justify-between flex-col items-start"
                      data-testid="list-divided-item__inner-wrapper"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="mr-5 text-xl font-semibold"
                          data-testid="list-divided-item__label"
                        >
                          Personal Details
                        </span>
                        <span
                          class="text-sm text-theme-neutral-dark mt-1 font-medium text-theme-neutral-dark"
                          data-testid="list-divided-item__label--description"
                        >
                          Profile Image
                        </span>
                      </div>
                    </div>
                    <div
                      class=""
                      data-testid="list-divided-item__content"
                    >
                      <div
                        class="flex flex-row mt-2 mb-8"
                      >
                        <div
                          class="flex items-center justify-center w-24 h-24 mr-6 border-2 border-dashed rounded border-theme-neutral-300"
                        >
                          <div
                            class="w-20 h-20 overflow-hidden rounded-full"
                          >
                            <button
                              class="sc-AxjAm ddJBbC w-20 h-20"
                              color="primary"
                              data-testid="CreateProfile__upload-button"
                              type="button"
                            >
                              <div
                                class="sc-AxhCb fxrKLH"
                                height="1em"
                                width="1em"
                              >
                                <svg>
                                  upload.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
                <div
                  class="relative space-y-8"
                >
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="flex inline-block mb-2 text-sm font-medium transition-colors duration-100 FormLabel text-theme-neutral-dark"
                      data-testid="FormLabel"
                      for="name"
                      label="Name"
                      required=""
                    >
                      Name
                      <div
                        class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <input
                      class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                      data-testid="Input"
                      name="name"
                    />
                  </fieldset>
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="flex inline-block mb-2 text-sm font-medium transition-colors duration-100 FormLabel text-theme-neutral-dark"
                      data-testid="FormLabel"
                      for="marketProvider"
                      label="Market Provider"
                      required=""
                    >
                      Market Provider
                      <div
                        class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <div
                      class="relative w-full"
                    >
                      <input
                        class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
                        data-testid="select-list__input"
                        name="marketProvider"
                        readonly=""
                        type="text"
                        value=""
                      />
                      <div
                        class="relative w-full cursor-pointer"
                      >
                        <div>
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="downshift-0-label downshift-0-toggle-button"
                            class="sc-fznxsB hwZFkF   "
                            data-testid="select-list__toggle-button"
                            id="downshift-0-toggle-button"
                            type="button"
                          >
                            Select Market Provider
                          </button>
                          <ul
                            aria-labelledby="downshift-0-label"
                            class="sc-fznJRM KaIHo"
                            id="downshift-0-menu"
                            role="listbox"
                            tabindex="-1"
                          />
                        </div>
                        <div
                          class="sc-AxgMl sc-Axmtr hWILTO w-10 pointer-events-none text-theme-neutral"
                        >
                          <div
                            class="sc-AxhCb dxfUlj"
                            height="8"
                            width="8"
                          >
                            <svg>
                              arrowdown.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="flex inline-block mb-2 text-sm font-medium transition-colors duration-100 FormLabel text-theme-neutral-dark"
                      data-testid="FormLabel"
                      for="currency"
                      label="Currency"
                      required=""
                    >
                      Currency
                      <div
                        class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <div
                      class="relative w-full"
                    >
                      <input
                        class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
                        data-testid="select-list__input"
                        name="currency"
                        readonly=""
                        type="text"
                        value=""
                      />
                      <div
                        class="relative w-full cursor-pointer"
                      >
                        <div>
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="downshift-1-label downshift-1-toggle-button"
                            class="sc-fznxsB hwZFkF   "
                            data-testid="select-list__toggle-button"
                            id="downshift-1-toggle-button"
                            type="button"
                          >
                            Select Currency
                          </button>
                          <ul
                            aria-labelledby="downshift-1-label"
                            class="sc-fznJRM KaIHo"
                            id="downshift-1-menu"
                            role="listbox"
                            tabindex="-1"
                          />
                        </div>
                        <div
                          class="sc-AxgMl sc-Axmtr hWILTO w-10 pointer-events-none text-theme-neutral"
                        >
                          <div
                            class="sc-AxhCb dxfUlj"
                            height="8"
                            width="8"
                          >
                            <svg>
                              arrowdown.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
                <div
                  class="mt-8"
                >
                  <ul
                    class="sc-fzpjYC eNSRJG"
                    data-testid="list-divided__items"
                  >
                    <li
                      class="flex flex-col w-full "
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between flex-col items-start"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex flex-col"
                        >
                          <span
                            class="mr-5 text-lg font-semibold text-theme-neutral-dark"
                            data-testid="list-divided-item__label"
                          >
                            Dark Theme
                          </span>
                        </div>
                      </div>
                      <div
                        class=""
                        data-testid="list-divided-item__content"
                      >
                        <div
                          class="flex flex-row justify-between"
                        >
                          <span
                            class="mt-1 text-sm font-medium text-theme-neutral"
                          >
                            Want to set the wallet to dark mode?
                          </span>
                          <div
                            class="-mt-4"
                          >
                            <label
                              class="flex"
                            >
                              <input
                                class="sc-fznWqX iacyMP"
                                name="isDarkMode"
                                type="checkbox"
                              />
                              <div
                                class="sc-fzoiQi eGdcKs"
                              >
                                <span
                                  class="sc-fzqARJ hZWoJI"
                                />
                              </div>
                            </label>
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="sc-AxirZ jJscrd border-theme-neutral-300"
                  type="horizontal"
                />
              </div>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="sc-AxjAm ddJBbC"
                  color="primary"
                  type="button"
                >
                  Back
                </button>
                <button
                  class="sc-AxjAm ddQVWI"
                  color="primary"
                  data-testid="CreateProfile__submit-button"
                  type="submit"
                >
                  Complete
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreateProfile should store profile 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <div
      class="px-4 sm:px-6 lg:px-8 bg-theme-background"
    >
      <div
        class="flex items-center flex-shrink-0 h-20 md:h-24"
      >
        <div
          class="flex p-2 rounded-lg bg-logo"
        >
          <img
            alt="ARK Logo"
            class="h-6 md:h-8 lg:h-10"
            src="ark-logo.png"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fzoXzr imWwrn flex flex-col justify-center flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="max-w-lg mx-auto"
          >
            <h1
              class="mb-0 md:text-4xl"
            >
              Create Profile
            </h1>
            <div
              class="text-theme-neutral-dark"
            >
              Login with your MarketSquare account or create a new Profile below.
            </div>
            <div
              class="pb-4 mt-8"
            >
              <button
                class="sc-AxjAm ddQVWI w-full"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxhCb VoPpj"
                  height="20"
                  width="20"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
                <span
                  class="ml-2"
                >
                  Login with MarketSquare
                </span>
              </button>
            </div>
            <div
              class="sc-AxirZ jjvtQn border-theme-neutral-300"
              type="horizontal"
            />
            <form
              class="mt-8"
              data-testid="CreateProfile__form"
            >
              <div
                class=""
              >
                <ul
                  class="sc-fzpjYC eNSRJG"
                  data-testid="list-divided__items"
                >
                  <li
                    class="flex flex-col w-full "
                    data-testid="list-divided-item__wrapper"
                  >
                    <div
                      class="flex justify-between flex-col items-start"
                      data-testid="list-divided-item__inner-wrapper"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="mr-5 text-xl font-semibold"
                          data-testid="list-divided-item__label"
                        >
                          Personal Details
                        </span>
                        <span
                          class="text-sm text-theme-neutral-dark mt-1 font-medium text-theme-neutral-dark"
                          data-testid="list-divided-item__label--description"
                        >
                          Profile Image
                        </span>
                      </div>
                    </div>
                    <div
                      class=""
                      data-testid="list-divided-item__content"
                    >
                      <div
                        class="flex flex-row mt-2 mb-8"
                      >
                        <div
                          class="flex items-center justify-center w-24 h-24 mr-6 border-2 border-dashed rounded border-theme-neutral-300"
                        >
                          <div
                            class="w-20 h-20 overflow-hidden rounded-full"
                          >
                            <button
                              class="sc-AxjAm ddJBbC w-20 h-20"
                              color="primary"
                              data-testid="CreateProfile__upload-button"
                              type="button"
                            >
                              <div
                                class="sc-AxhCb fxrKLH"
                                height="1em"
                                width="1em"
                              >
                                <svg>
                                  upload.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                        <div
                          class="relative w-24 h-24 rounded bg-theme-neutral-contrast"
                        >
                          <img
                            alt="Profile avatar"
                            class="object-cover w-24 h-24 bg-center bg-no-repeat bg-cover rounded"
                            src="data:image/png;base64,avatarImage"
                          />
                          <button
                            class="absolute flex items-center justify-center w-6 h-6 p-1 rounded bg-theme-danger-contrast text-theme-danger -top-3 -right-3"
                            data-testid="CreateProfile__remove-avatar"
                            type="button"
                          >
                            <div
                              class="sc-AxhCb jYYSCW"
                              height="16"
                              width="13"
                            >
                              <svg>
                                close.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
                <div
                  class="relative space-y-8"
                >
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="flex inline-block mb-2 text-sm font-medium transition-colors duration-100 FormLabel text-theme-neutral-dark"
                      data-testid="FormLabel"
                      for="name"
                      label="Name"
                      required=""
                    >
                      Name
                      <div
                        class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <input
                      class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                      data-testid="Input"
                      name="name"
                    />
                  </fieldset>
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="flex inline-block mb-2 text-sm font-medium transition-colors duration-100 FormLabel text-theme-neutral-dark"
                      data-testid="FormLabel"
                      for="marketProvider"
                      label="Market Provider"
                      required=""
                    >
                      Market Provider
                      <div
                        class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <div
                      class="relative w-full"
                    >
                      <input
                        class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
                        data-testid="select-list__input"
                        name="marketProvider"
                        readonly=""
                        type="text"
                        value="coincap"
                      />
                      <div
                        class="relative w-full cursor-pointer"
                      >
                        <div>
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="downshift-2-label downshift-2-toggle-button"
                            class="sc-fznxsB hwZFkF  is-selected "
                            data-testid="select-list__toggle-button"
                            id="downshift-2-toggle-button"
                            type="button"
                          >
                            CoinCap
                          </button>
                          <ul
                            aria-labelledby="downshift-2-label"
                            class="sc-fznJRM KaIHo"
                            id="downshift-2-menu"
                            role="listbox"
                            tabindex="-1"
                          />
                        </div>
                        <div
                          class="sc-AxgMl sc-Axmtr hWILTO w-10 pointer-events-none text-theme-neutral"
                        >
                          <div
                            class="sc-AxhCb dxfUlj"
                            height="8"
                            width="8"
                          >
                            <svg>
                              arrowdown.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="flex inline-block mb-2 text-sm font-medium transition-colors duration-100 FormLabel text-theme-neutral-dark"
                      data-testid="FormLabel"
                      for="currency"
                      label="Currency"
                      required=""
                    >
                      Currency
                      <div
                        class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <div
                      class="relative w-full"
                    >
                      <input
                        class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
                        data-testid="select-list__input"
                        name="currency"
                        readonly=""
                        type="text"
                        value="btc"
                      />
                      <div
                        class="relative w-full cursor-pointer"
                      >
                        <div>
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="downshift-3-label downshift-3-toggle-button"
                            class="sc-fznxsB hwZFkF  is-selected "
                            data-testid="select-list__toggle-button"
                            id="downshift-3-toggle-button"
                            type="button"
                          >
                            BTC (Ƀ)
                          </button>
                          <ul
                            aria-labelledby="downshift-3-label"
                            class="sc-fznJRM KaIHo"
                            id="downshift-3-menu"
                            role="listbox"
                            tabindex="-1"
                          />
                        </div>
                        <div
                          class="sc-AxgMl sc-Axmtr hWILTO w-10 pointer-events-none text-theme-neutral"
                        >
                          <div
                            class="sc-AxhCb dxfUlj"
                            height="8"
                            width="8"
                          >
                            <svg>
                              arrowdown.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
                <div
                  class="mt-8"
                >
                  <ul
                    class="sc-fzpjYC eNSRJG"
                    data-testid="list-divided__items"
                  >
                    <li
                      class="flex flex-col w-full "
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between flex-col items-start"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex flex-col"
                        >
                          <span
                            class="mr-5 text-lg font-semibold text-theme-neutral-dark"
                            data-testid="list-divided-item__label"
                          >
                            Dark Theme
                          </span>
                        </div>
                      </div>
                      <div
                        class=""
                        data-testid="list-divided-item__content"
                      >
                        <div
                          class="flex flex-row justify-between"
                        >
                          <span
                            class="mt-1 text-sm font-medium text-theme-neutral"
                          >
                            Want to set the wallet to dark mode?
                          </span>
                          <div
                            class="-mt-4"
                          >
                            <label
                              class="flex"
                            >
                              <input
                                class="sc-fznWqX iacyMP"
                                name="isDarkMode"
                                type="checkbox"
                              />
                              <div
                                class="sc-fzoiQi eGdcKs"
                              >
                                <span
                                  class="sc-fzqARJ hZWoJI"
                                />
                              </div>
                            </label>
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="sc-AxirZ jJscrd border-theme-neutral-300"
                  type="horizontal"
                />
              </div>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="sc-AxjAm ddJBbC"
                  color="primary"
                  type="button"
                >
                  Back
                </button>
                <button
                  class="sc-AxjAm ddQVWI"
                  color="primary"
                  data-testid="CreateProfile__submit-button"
                  type="submit"
                >
                  Complete
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreateProfile should upload and remove avatar image 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <div
      class="px-4 sm:px-6 lg:px-8 bg-theme-background"
    >
      <div
        class="flex items-center flex-shrink-0 h-20 md:h-24"
      >
        <div
          class="flex p-2 rounded-lg bg-logo"
        >
          <img
            alt="ARK Logo"
            class="h-6 md:h-8 lg:h-10"
            src="ark-logo.png"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fzoXzr imWwrn flex flex-col justify-center flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="max-w-lg mx-auto"
          >
            <h1
              class="mb-0 md:text-4xl"
            >
              Create Profile
            </h1>
            <div
              class="text-theme-neutral-dark"
            >
              Login with your MarketSquare account or create a new Profile below.
            </div>
            <div
              class="pb-4 mt-8"
            >
              <button
                class="sc-AxjAm ddQVWI w-full"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxhCb VoPpj"
                  height="20"
                  width="20"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
                <span
                  class="ml-2"
                >
                  Login with MarketSquare
                </span>
              </button>
            </div>
            <div
              class="sc-AxirZ jjvtQn border-theme-neutral-300"
              type="horizontal"
            />
            <form
              class="mt-8"
              data-testid="CreateProfile__form"
            >
              <div
                class=""
              >
                <ul
                  class="sc-fzpjYC eNSRJG"
                  data-testid="list-divided__items"
                >
                  <li
                    class="flex flex-col w-full "
                    data-testid="list-divided-item__wrapper"
                  >
                    <div
                      class="flex justify-between flex-col items-start"
                      data-testid="list-divided-item__inner-wrapper"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="mr-5 text-xl font-semibold"
                          data-testid="list-divided-item__label"
                        >
                          Personal Details
                        </span>
                        <span
                          class="text-sm text-theme-neutral-dark mt-1 font-medium text-theme-neutral-dark"
                          data-testid="list-divided-item__label--description"
                        >
                          Profile Image
                        </span>
                      </div>
                    </div>
                    <div
                      class=""
                      data-testid="list-divided-item__content"
                    >
                      <div
                        class="flex flex-row mt-2 mb-8"
                      >
                        <div
                          class="flex items-center justify-center w-24 h-24 mr-6 border-2 border-dashed rounded border-theme-neutral-300"
                        >
                          <div
                            class="w-20 h-20 overflow-hidden rounded-full"
                          >
                            <button
                              class="sc-AxjAm ddJBbC w-20 h-20"
                              color="primary"
                              data-testid="CreateProfile__upload-button"
                              type="button"
                            >
                              <div
                                class="sc-AxhCb fxrKLH"
                                height="1em"
                                width="1em"
                              >
                                <svg>
                                  upload.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
                <div
                  class="relative space-y-8"
                >
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="flex inline-block mb-2 text-sm font-medium transition-colors duration-100 FormLabel text-theme-neutral-dark"
                      data-testid="FormLabel"
                      for="name"
                      label="Name"
                      required=""
                    >
                      Name
                      <div
                        class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <input
                      class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                      data-testid="Input"
                      name="name"
                    />
                  </fieldset>
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="flex inline-block mb-2 text-sm font-medium transition-colors duration-100 FormLabel text-theme-neutral-dark"
                      data-testid="FormLabel"
                      for="marketProvider"
                      label="Market Provider"
                      required=""
                    >
                      Market Provider
                      <div
                        class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <div
                      class="relative w-full"
                    >
                      <input
                        class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
                        data-testid="select-list__input"
                        name="marketProvider"
                        readonly=""
                        type="text"
                        value="coincap"
                      />
                      <div
                        class="relative w-full cursor-pointer"
                      >
                        <div>
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="downshift-30-label downshift-30-toggle-button"
                            class="sc-fznxsB hwZFkF  is-selected "
                            data-testid="select-list__toggle-button"
                            id="downshift-30-toggle-button"
                            type="button"
                          >
                            CoinCap
                          </button>
                          <ul
                            aria-labelledby="downshift-30-label"
                            class="sc-fznJRM KaIHo"
                            id="downshift-30-menu"
                            role="listbox"
                            tabindex="-1"
                          />
                        </div>
                        <div
                          class="sc-AxgMl sc-Axmtr hWILTO w-10 pointer-events-none text-theme-neutral"
                        >
                          <div
                            class="sc-AxhCb dxfUlj"
                            height="8"
                            width="8"
                          >
                            <svg>
                              arrowdown.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="flex inline-block mb-2 text-sm font-medium transition-colors duration-100 FormLabel text-theme-neutral-dark"
                      data-testid="FormLabel"
                      for="currency"
                      label="Currency"
                      required=""
                    >
                      Currency
                      <div
                        class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <div
                      class="relative w-full"
                    >
                      <input
                        class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
                        data-testid="select-list__input"
                        name="currency"
                        readonly=""
                        type="text"
                        value="btc"
                      />
                      <div
                        class="relative w-full cursor-pointer"
                      >
                        <div>
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="downshift-31-label downshift-31-toggle-button"
                            class="sc-fznxsB hwZFkF  is-selected "
                            data-testid="select-list__toggle-button"
                            id="downshift-31-toggle-button"
                            type="button"
                          >
                            BTC (Ƀ)
                          </button>
                          <ul
                            aria-labelledby="downshift-31-label"
                            class="sc-fznJRM KaIHo"
                            id="downshift-31-menu"
                            role="listbox"
                            tabindex="-1"
                          />
                        </div>
                        <div
                          class="sc-AxgMl sc-Axmtr hWILTO w-10 pointer-events-none text-theme-neutral"
                        >
                          <div
                            class="sc-AxhCb dxfUlj"
                            height="8"
                            width="8"
                          >
                            <svg>
                              arrowdown.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
                <div
                  class="mt-8"
                >
                  <ul
                    class="sc-fzpjYC eNSRJG"
                    data-testid="list-divided__items"
                  >
                    <li
                      class="flex flex-col w-full "
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between flex-col items-start"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex flex-col"
                        >
                          <span
                            class="mr-5 text-lg font-semibold text-theme-neutral-dark"
                            data-testid="list-divided-item__label"
                          >
                            Dark Theme
                          </span>
                        </div>
                      </div>
                      <div
                        class=""
                        data-testid="list-divided-item__content"
                      >
                        <div
                          class="flex flex-row justify-between"
                        >
                          <span
                            class="mt-1 text-sm font-medium text-theme-neutral"
                          >
                            Want to set the wallet to dark mode?
                          </span>
                          <div
                            class="-mt-4"
                          >
                            <label
                              class="flex"
                            >
                              <input
                                class="sc-fznWqX iacyMP"
                                name="isDarkMode"
                                type="checkbox"
                              />
                              <div
                                class="sc-fzoiQi eGdcKs"
                              >
                                <span
                                  class="sc-fzqARJ hZWoJI"
                                />
                              </div>
                            </label>
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="sc-AxirZ jJscrd border-theme-neutral-300"
                  type="horizontal"
                />
              </div>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="sc-AxjAm ddJBbC"
                  color="primary"
                  type="button"
                >
                  Back
                </button>
                <button
                  class="sc-AxjAm ddQVWI"
                  color="primary"
                  data-testid="CreateProfile__submit-button"
                  type="submit"
                >
                  Complete
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
